# bpmn2goal_python

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
BPMN2GOALSPEC/: .project
BPMN2GOALSPEC/WebContent/: index.html
BPMN2GOALSPEC/WebContent/css/: style.css
BPMN2GOALSPEC/WebContent/js/: script.js
BPMN2GOALSPEC/WebContent/testCase/: book_management_example.bpmn  book_writing_example.bpmn
BPMN2Goal/: .classpath  .project
BPMN2Goal/WebContent/: index.html
BPMN2Goal/WebContent/WEB-INF/: web.xml
BPMN2Goal/WebContent/js/: script.js
BPMN2Goal/src/ids/database/: ContextTable.java  EntryPointTable.java  GoalTable.java  HTMLUtil.java  JobTable.java  ManualTaskTable.java  RoleTable.java  Table.java  UserTable.java
BPMN2Goal/src/ids/model/: ContextEntity.java  RouteEntity.java  UserEntity.java
BPMN2REQWEB/: .classpath  .project
BPMN2REQWEB/WebContent/WEB-INF/file/: ProcessoIncendioXMI.xml
BPMN2REQWEB/src/ids/database/: RouteTable.java
sanet-tool/: build.sbt
src/: bpmn_loader.py
src/fol/: parser.py
src/fol/formula/: __init__.py  conjunction.py  disjunction.py  exclusive_disjunction.py  exists_quantifier.py  falsity.py  formula.py  ground_literal.py  literal.py  negation.py  truth.py  universal_quintifier.py
src/fol/predicate/: __init__.py  ground_predicate.py  predicate.py
src/fol/term/: __init__.py  atom_term.py  constant_string_term.py  constant_term.py  falsity_term.py  numeral_term.py  string_term.py  term.py  truth_term.py  variable_term.py
src/workflow/: __init__.py  workflow.py  workflow_state.py
(+159 files in other folders)
